# RAG-opensource-toolkit

./: .env.example  .gitignore  CLAUDE.md  README.md  README_CN.md  pyproject.toml
configs/: README.md  pipeline.example.yaml
docs/: architecture.md
examples/: build_pdf_index.py  simple_csv_rag.py  simple_rag.py
src/rag_toolkit/: __init__.py  run_logger.py
src/rag_toolkit/core/: __init__.py  base.py  config.py  types.py
src/rag_toolkit/embeddings/: __init__.py  base.py  client.py  factory.py  indexer.py  local_embedder.py  openrouter_embedder.py  vector_index.py
src/rag_toolkit/evaluation/: __init__.py  base.py  deep_eval_evaluator.py  factory.py  prompts.py  simple_evaluator.py
src/rag_toolkit/generation/: __init__.py  base.py  factory.py  openrouter_generator.py  prompts.py  simple_generator.py  zhipu_generator.py
src/rag_toolkit/indexing/: __init__.py  base.py  csv_loader.py  document_processor.py  factory.py  pdf_loader.py  prompts.py  proposition_processor.py  (+3 more)
tests/: test_bm25_retriever.py  test_config_loading.py  test_contextual_compressor.py  test_csv_loader.py  test_deep_eval_evaluator.py  test_evaluation_factory.py  test_generation_factory.py  test_hybrid_retriever.py  test_imports.py  test_indexing_factory.py  test_llm_reranker.py  test_openrouter_client.py  test_openrouter_llm.py  test_post_retrieval_factory.py  test_pre_retrieval_components.py  test_pre_retrieval_factory.py  test_proposition_processor.py  test_relevant_segment_extractor.py  test_reranker.py  test_retrieval_factory.py  test_simple_rag_flow.py  test_vector_index_persistence.py
(+36 files in other folders)
